objects/Calendar_Setting__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndLabel__c</fullName>
        <label>EndLabel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ffname1__c</fullName>
        <label>Filter Field Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ffname2__c</fullName>
        <label>Filter Field Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ffopp1__c</fullName>
        <label>Filter Field Operator 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ffopp2__c</fullName>
        <label>Filter Field Operator 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ffval1__c</fullName>
        <label>Filter Field Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ffval2__c</fullName>
        <label>Filter Field Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_Operator__c</fullName>
        <label>Logical Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectLabel__c</fullName>
        <label>ObjectLabel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartLabel__c</fullName>
        <label>StartLabel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <label>Where</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altDateDT1__c</fullName>
        <label>Alt Date Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>altDateDT2__c</fullName>
        <label>Alt Date Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Calendar Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>